Opened 13 years ago
Closed 13 years ago
#2980 closed defect (fixed)
twinvq: frame too small (1 bytes) error/warning
| Reported by: | ami_stuff | Owned by: | |
|---|---|---|---|
| Priority: | minor | Component: | undetermined |
| Version: | git-master | Keywords: | vqf twinvq regression |
| Cc: | Blocked By: | ||
| Blocking: | Reproduced by developer: | yes | |
| Analyzed by developer: | no |
Description
since some time ffmpeg floods the console with
"[twinvq @ 02a08000] Frame too small (1 bytes). Truncated file?"
warning while decoding vqf files. Maybe this check is invalid?
http://samples.mplayerhq.hu/vqf/fastfe.vqf
C:\>ffmpeg -i fastfe.vqf -f null -
ffmpeg version N-56467-g13eff47 Copyright (c) 2000-2013 the FFmpeg developers
built on Sep 19 2013 18:02:34 with gcc 4.7.3 (GCC)
configuration: --enable-gpl --enable-version3 --disable-w32threads --enable-av
isynth --enable-bzlib --enable-fontconfig --enable-frei0r --enable-gnutls --enab
le-iconv --enable-libass --enable-libbluray --enable-libcaca --enable-libfreetyp
e --enable-libgsm --enable-libilbc --enable-libmodplug --enable-libmp3lame --ena
ble-libopencore-amrnb --enable-libopencore-amrwb --enable-libopenjpeg --enable-l
ibopus --enable-librtmp --enable-libschroedinger --enable-libsoxr --enable-libsp
eex --enable-libtheora --enable-libtwolame --enable-libvidstab --enable-libvo-aa
cenc --enable-libvo-amrwbenc --enable-libvorbis --enable-libvpx --enable-libx264
--enable-libxavs --enable-libxvid --enable-zlib
libavutil 52. 45.100 / 52. 45.100
libavcodec 55. 33.100 / 55. 33.100
libavformat 55. 18.100 / 55. 18.100
libavdevice 55. 3.100 / 55. 3.100
libavfilter 3. 86.102 / 3. 86.102
libswscale 2. 5.100 / 2. 5.100
libswresample 0. 17.103 / 0. 17.103
libpostproc 52. 3.100 / 52. 3.100
[vqf @ 02a079c0] Estimating duration from bitrate, this may be inaccurate
Input #0, vqf, from 'fastfe.vqf':
Metadata:
title : Fastlove (Forthright edit)
comment :
copyright : George Michael
author : George Michael
size : 1594293
Duration: 00:04:25.73, start: 0.000000, bitrate: 48 kb/s
Stream #0:0: Audio: twinvq, 22050 Hz, stereo, fltp, 48 kb/s
Output #0, null, to 'pipe:':
Metadata:
title : Fastlove (Forthright edit)
comment :
copyright : George Michael
author : George Michael
size : 1594293
encoder : Lavf55.18.100
Stream #0:0: Audio: pcm_s16le, 22050 Hz, stereo, s16, 705 kb/s
Stream mapping:
Stream #0:0 -> #0:0 (twinvq -> pcm_s16le)
Press [q] to stop, [?] for help
Multiple frames in a packet from stream 0
[twinvq @ 02a08000] Frame too small (1 bytes). Truncated file?
Error while decoding stream #0:0: Error number -22 occurred
[twinvq @ 02a08000] Frame too small (1 bytes). Truncated file?
Error while decoding stream #0:0: Error number -22 occurred
[twinvq @ 02a08000] Frame too small (1 bytes). Truncated file?
Error while decoding stream #0:0: Error number -22 occurred
[twinvq @ 02a08000] Frame too small (1 bytes). Truncated file?
Error while decoding stream #0:0: Error number -22 occurred
[twinvq @ 02a08000] Frame too small (1 bytes). Truncated file?
Error while decoding stream #0:0: Error number -22 occurred
[twinvq @ 02a08000] Frame too small (1 bytes). Truncated file?
Error while decoding stream #0:0: Error number -22 occurred
[twinvq @ 02a08000] Frame too small (1 bytes). Truncated file?
Error while decoding stream #0:0: Error number -22 occurred
[twinvq @ 02a08000] Frame too small (1 bytes). Truncated file?
Error while decoding stream #0:0: Error number -22 occurred
[twinvq @ 02a08000] Frame too small (1 bytes). Truncated file?
Error while decoding stream #0:0: Error number -22 occurred
[twinvq @ 02a08000] Frame too small (1 bytes). Truncated file?
Error while decoding stream #0:0: Error number -22 occurred
[twinvq @ 02a08000] Frame too small (1 bytes). Truncated file?
Error while decoding stream #0:0: Error number -22 occurred
[twinvq @ 02a08000] Frame too small (1 bytes). Truncated file?
Error while decoding stream #0:0: Error number -22 occurred
[twinvq @ 02a08000] Frame too small (1 bytes). Truncated file?
Error while decoding stream #0:0: Error number -22 occurred
[twinvq @ 02a08000] Frame too small (1 bytes). Truncated file?
Error while decoding stream #0:0: Error number -22 occurred
[twinvq @ 02a08000] Frame too small (1 bytes). Truncated file?
Error while decoding stream #0:0: Error number -22 occurred
[twinvq @ 02a08000] Frame too small (1 bytes). Truncated file?
Error while decoding stream #0:0: Error number -22 occurred
[twinvq @ 02a08000] Frame too small (1 bytes). Truncated file?
Error while decoding stream #0:0: Error number -22 occurred
[twinvq @ 02a08000] Frame too small (1 bytes). Truncated file?
Error while decoding stream #0:0: Error number -22 occurred
[twinvq @ 02a08000] Frame too small (1 bytes). Truncated file?
Error while decoding stream #0:0: Error number -22 occurred
[twinvq @ 02a08000] Frame too small (1 bytes). Truncated file?
Error while decoding stream #0:0: Error number -22 occurred
[twinvq @ 02a08000] Frame too small (1 bytes). Truncated file?
Error while decoding stream #0:0: Error number -22 occurred
[twinvq @ 02a08000] Frame too small (1 bytes). Truncated file?
Error while decoding stream #0:0: Error number -22 occurred
[twinvq @ 02a08000] Frame too small (1 bytes). Truncated file?
Error while decoding stream #0:0: Error number -22 occurred
[twinvq @ 02a08000] Frame too small (1 bytes). Truncated file?
Error while decoding stream #0:0: Error number -22 occurred
[twinvq @ 02a08000] Frame too small (1 bytes). Truncated file?
Error while decoding stream #0:0: Error number -22 occurred
[twinvq @ 02a08000] Frame too small (1 bytes). Truncated file?
Error while decoding stream #0:0: Error number -22 occurred
[twinvq @ 02a08000] Frame too small (1 bytes). Truncated file?
Error while decoding stream #0:0: Error number -22 occurred
[twinvq @ 02a08000] Frame too small (1 bytes). Truncated file?
Error while decoding stream #0:0: Error number -22 occurred
[twinvq @ 02a08000] Frame too small (1 bytes). Truncated file?
Error while decoding stream #0:0: Error number -22 occurred
[twinvq @ 02a08000] Frame too small (1 bytes). Truncated file?
Error while decoding stream #0:0: Error number -22 occurred
[twinvq @ 02a08000] Frame too small (1 bytes). Truncated file?
Error while decoding stream #0:0: Error number -22 occurred
[twinvq @ 02a08000] Frame too small (1 bytes). Truncated file?
Error while decoding stream #0:0: Error number -22 occurred
[twinvq @ 02a08000] Frame too small (1 bytes). Truncated file?
Error while decoding stream #0:0: Error number -22 occurred
[twinvq @ 02a08000] Frame too small (1 bytes). Truncated file?
Error while decoding stream #0:0: Error number -22 occurred
[twinvq @ 02a08000] Frame too small (1 bytes). Truncated file?
Error while decoding stream #0:0: Error number -22 occurred
[twinvq @ 02a08000] Frame too small (1 bytes). Truncated file?
Error while decoding stream #0:0: Error number -22 occurred
[twinvq @ 02a08000] Frame too small (1 bytes). Truncated file?
Error while decoding stream #0:0: Error number -22 occurred
[twinvq @ 02a08000] Frame too small (1 bytes). Truncated file?
Error while decoding stream #0:0: Error number -22 occurred
[twinvq @ 02a08000] Frame too small (1 bytes). Truncated file?
Error while decoding stream #0:0: Error number -22 occurred
[twinvq @ 02a08000] Frame too small (1 bytes). Truncated file?
Error while decoding stream #0:0: Error number -22 occurred
[twinvq @ 02a08000] Frame too small (1 bytes). Truncated file?
Error while decoding stream #0:0: Error number -22 occurred
[twinvq @ 02a08000] Frame too small (1 bytes). Truncated file?
Error while decoding stream #0:0: Error number -22 occurred
[twinvq @ 02a08000] Frame too small (1 bytes). Truncated file?
Error while decoding stream #0:0: Error number -22 occurred
[twinvq @ 02a08000] Frame too small (1 bytes). Truncated file?
Error while decoding stream #0:0: Error number -22 occurred
[twinvq @ 02a08000] Frame too small (1 bytes). Truncated file?
Error while decoding stream #0:0: Error number -22 occurred
[twinvq @ 02a08000] Frame too small (1 bytes). Truncated file?
Error while decoding stream #0:0: Error number -22 occurred
[twinvq @ 02a08000] Frame too small (1 bytes). Truncated file?
Error while decoding stream #0:0: Error number -22 occurred
[twinvq @ 02a08000] Frame too small (1 bytes). Truncated file?
Error while decoding stream #0:0: Error number -22 occurred
[twinvq @ 02a08000] Frame too small (1 bytes). Truncated file?
Error while decoding stream #0:0: Error number -22 occurred
[twinvq @ 02a08000] Frame too small (1 bytes). Truncated file?
Error while decoding stream #0:0: Error number -22 occurred
[twinvq @ 02a08000] Frame too small (1 bytes). Truncated file?
Error while decoding stream #0:0: Error number -22 occurred
[twinvq @ 02a08000] Frame too small (1 bytes). Truncated file?
Error while decoding stream #0:0: Error number -22 occurred
[twinvq @ 02a08000] Frame too small (1 bytes). Truncated file?
Error while decoding stream #0:0: Error number -22 occurred
[twinvq @ 02a08000] Frame too small (1 bytes). Truncated file?
Error while decoding stream #0:0: Error number -22 occurred
[twinvq @ 02a08000] Frame too small (1 bytes). Truncated file?
Error while decoding stream #0:0: Error number -22 occurred
[twinvq @ 02a08000] Frame too small (1 bytes). Truncated file?
Error while decoding stream #0:0: Error number -22 occurred
[twinvq @ 02a08000] Frame too small (1 bytes). Truncated file?
Error while decoding stream #0:0: Error number -22 occurred
[twinvq @ 02a08000] Frame too small (1 bytes). Truncated file?
Error while decoding stream #0:0: Error number -22 occurred
[twinvq @ 02a08000] Frame too small (1 bytes). Truncated file?
Error while decoding stream #0:0: Error number -22 occurred
[twinvq @ 02a08000] Frame too small (1 bytes). Truncated file?
Error while decoding stream #0:0: Error number -22 occurred
[twinvq @ 02a08000] Frame too small (1 bytes). Truncated file?
Error while decoding stream #0:0: Error number -22 occurred
[twinvq @ 02a08000] Frame too small (1 bytes). Truncated file?
Error while decoding stream #0:0: Error number -22 occurred
[twinvq @ 02a08000] Frame too small (1 bytes). Truncated file?
Error while decoding stream #0:0: Error number -22 occurred
[twinvq @ 02a08000] Frame too small (1 bytes). Truncated file?
Error while decoding stream #0:0: Error number -22 occurred
[twinvq @ 02a08000] Frame too small (1 bytes). Truncated file?
Error while decoding stream #0:0: Error number -22 occurred
[twinvq @ 02a08000] Frame too small (1 bytes). Truncated file?
Error while decoding stream #0:0: Error number -22 occurred
[twinvq @ 02a08000] Frame too small (1 bytes). Truncated file?
Error while decoding stream #0:0: Error number -22 occurred
[twinvq @ 02a08000] Frame too small (1 bytes). Truncated file?
Error while decoding stream #0:0: Error number -22 occurred
[twinvq @ 02a08000] Frame too small (1 bytes). Truncated file?
Error while decoding stream #0:0: Error number -22 occurred
[twinvq @ 02a08000] Frame too small (1 bytes). Truncated file?
Error while decoding stream #0:0: Error number -22 occurred
[twinvq @ 02a08000] Frame too small (1 bytes). Truncated file?
Error while decoding stream #0:0: Error number -22 occurred
[twinvq @ 02a08000] Frame too small (1 bytes). Truncated file?
Error while decoding stream #0:0: Error number -22 occurred
[twinvq @ 02a08000] Frame too small (1 bytes). Truncated file?
Error while decoding stream #0:0: Error number -22 occurred
[twinvq @ 02a08000] Frame too small (1 bytes). Truncated file?
Error while decoding stream #0:0: Error number -22 occurred
[twinvq @ 02a08000] Frame too small (1 bytes). Truncated file?
Error while decoding stream #0:0: Error number -22 occurred
[twinvq @ 02a08000] Frame too small (1 bytes). Truncated file?
Error while decoding stream #0:0: Error number -22 occurred
[twinvq @ 02a08000] Frame too small (1 bytes). Truncated file?
Error while decoding stream #0:0: Error number -22 occurred
[twinvq @ 02a08000] Frame too small (1 bytes). Truncated file?
Error while decoding stream #0:0: Error number -22 occurred
[twinvq @ 02a08000] Frame too small (1 bytes). Truncated file?
Error while decoding stream #0:0: Error number -22 occurred
[twinvq @ 02a08000] Frame too small (1 bytes). Truncated file?
Error while decoding stream #0:0: Error number -22 occurred
[twinvq @ 02a08000] Frame too small (1 bytes). Truncated file?
Error while decoding stream #0:0: Error number -22 occurred
[twinvq @ 02a08000] Frame too small (1 bytes). Truncated file?
Error while decoding stream #0:0: Error number -22 occurred
[twinvq @ 02a08000] Frame too small (1 bytes). Truncated file?
Error while decoding stream #0:0: Error number -22 occurred
[twinvq @ 02a08000] Frame too small (1 bytes). Truncated file?
Error while decoding stream #0:0: Error number -22 occurred
size=N/A time=00:00:06.36 bitrate=N/A
video:0kB audio:540kB subtitle:0 global headers:0kB muxing overhead -100.003979%
Received signal 2: terminating.
C:\>ffmpeg -i fastfe.vqf -f null -
ffmpeg version N-55159-gf118b41 Copyright (c) 2000-2013 the FFmpeg developers
built on Aug 1 2013 18:01:57 with gcc 4.7.3 (GCC)
configuration: --enable-gpl --enable-version3 --disable-w32threads --enable-av
isynth --enable-bzlib --enable-fontconfig --enable-frei0r --enable-gnutls --enab
le-iconv --enable-libass --enable-libbluray --enable-libcaca --enable-libfreetyp
e --enable-libgsm --enable-libilbc --enable-libmodplug --enable-libmp3lame --ena
ble-libopencore-amrnb --enable-libopencore-amrwb --enable-libopenjpeg --enable-l
ibopus --enable-librtmp --enable-libschroedinger --enable-libsoxr --enable-libsp
eex --enable-libtheora --enable-libtwolame --enable-libvo-aacenc --enable-libvo-
amrwbenc --enable-libvorbis --enable-libvpx --enable-libx264 --enable-libxavs --
enable-libxvid --enable-zlib
libavutil 52. 40.100 / 52. 40.100
libavcodec 55. 19.100 / 55. 19.100
libavformat 55. 12.102 / 55. 12.102
libavdevice 55. 3.100 / 55. 3.100
libavfilter 3. 82.100 / 3. 82.100
libswscale 2. 4.100 / 2. 4.100
libswresample 0. 17.103 / 0. 17.103
libpostproc 52. 3.100 / 52. 3.100
[vqf @ 029b79c0] Estimating duration from bitrate, this may be inaccurate
Input #0, vqf, from 'fastfe.vqf':
Metadata:
title : Fastlove (Forthright edit)
comment :
copyright : George Michael
author : George Michael
size : 1594293
Duration: 00:04:25.73, start: 0.000000, bitrate: 48 kb/s
Stream #0:0: Audio: twinvq, 22050 Hz, stereo, fltp, 48 kb/s
Output #0, null, to 'pipe:':
Metadata:
title : Fastlove (Forthright edit)
comment :
copyright : George Michael
author : George Michael
size : 1594293
encoder : Lavf55.12.102
Stream #0:0: Audio: pcm_s16le, 22050 Hz, stereo, s16, 705 kb/s
Stream mapping:
Stream #0:0 -> #0:0 (twinvq -> pcm_s16le)
Press [q] to stop, [?] for help
fastfe.vqf: Input/output error
size=N/A time=00:04:25.72 bitrate=N/A
video:0kB audio:22880kB subtitle:0 global headers:0kB muxing overhead -100.00009
4%
Change History (3)
comment:1 by , 13 years ago
| Summary: | twivvq: frame too small (1 bytes) error/warning → twinvq: frame too small (1 bytes) error/warning |
|---|
comment:2 by , 13 years ago
| Keywords: | vqf twinvq regression added |
|---|---|
| Priority: | normal → minor |
| Reproduced by developer: | set |
| Status: | new → open |
| Version: | unspecified → git-master |
comment:3 by , 13 years ago
| Resolution: | → fixed |
|---|---|
| Status: | open → closed |
Note:
See TracTickets
for help on using tickets.



Regression since 6063f01 / 9e7b62f.