avcodec/twinvq: return the actual number of consumed bytes

Fixes Ticket2980

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>